--- a/the_light.ipynb
+++ b/the_light.ipynb
@@ -14,17 +14,7 @@
     "## The light waves\n",
     "* Light is an electromagnetic (affects the electrical and electromagnetic field) transversal (which means that the energy disturbance caused in the medium has a direction perpendicular to the direction of propagation) wave.\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Onde_electromagnetique.svg/1000px-Onde_electromagnetique.svg.png\" width=\"800\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Temporal representation of sound\n",
-    "* Sound waves can be represented by measuring the particles displacement from its equilibrium over time using a graph such as:\n",
-    "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Signal_Sampling.png/800px-Signal_Sampling.png\" width=\"400\">\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Onde_electromagnetique.svg/1000px-Onde_electromagnetique.svg.png\" width=\"800\">\n",
     "\n",
     "* Light propagates in translucent bodies and in a vacuum. In any case, its propagation speed depends on the electromagnetic permeability of the medium.\n",
     "\n",
@@ -35,62 +25,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Frequency representation of sound\n",
-    "* Because the periodic nature of the sound waves, we can also represent the basis of the frequency components (pure sinusoidal signals), that compose them. This is done using Fourier Analysis. The result is a graph of the type:\n",
+    "## Eletromagnetic spectrum\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/0/08/Fourier_Transform_of_bass_guitar_time_signal.png\" width=\"400\">\n",
+    "* The light is not different from a radio wave or X-rays, except that the oscillation frequency of the electromagnetic disturbance is different.\n",
     "\n",
-    "* Musical notes are produced by vibrating elements to certain\n",
-    "  frequencies. By definition, the spectrum of a musical note accumulates most of its\n",
-    "  energy (different from zero) in the frequencies:\n",
-    "  $$                                                                                                                                                                                                               \n",
-    "    x, 2x, 3x, \\cdots                                                                                                                                                                                                               \n",
-    "  $$\n",
-    "  where $x$ is the fundamental frequency of the note (which indicates\n",
-    "  which note is) and $2x, 3x, \\cdots$ is the *pitch of the note* (which\n",
-    "  amplitudes depend on the musical instrument that has produced the\n",
-    "  notes)."
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/EM_spectrum.svg/1000px-EM_spectrum.svg.png\" width=\"600\">\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A classification of the sound waves\n",
-    "* Depending of the compositing frecuencies, se talk about:\n",
-    "    1. Infrasounds: those sounds with a frequency smaller than $20$ Hz (not perceptible by humans).\n",
-    "    2. Audible sounds: between $20$ and $20{.}000$ Hz.\n",
-    "    3. Ultrasounds: over $20{.}000$ Hz. Also unnoticeable.\n",
-    "* These frequency ranges vary between individuals. These values are average values."
+    "## Intensity of light waves (luminance)\n",
+    "* One way to measure the luminous intensity is in candelas (cd). In this way, to measure the amount of light in a certain place, the number of candelas/unit of surface can be indicated.\n",
+    "\n",
+    "| place | cd/feet$^{2}$ |\n",
+    "|-------|---------------|\n",
+    "| sunny day  | 9.000 |\n",
+    "| cloudy day | 1.000 |\n",
+    "| office     | 100   |\n",
+    "| full moon  | 0,01  |\n",
+    "\n",
+    "* The reflectance index measures the amount of light reflected by an object.\n",
+    "\n",
+    "| object | index of reflectance |\n",
+    "|--------|----------------------|\n",
+    "| snow            | 0.93 |\n",
+    "| silver          | 0.90 |\n",
+    "| white paint     | 0.80 |\n",
+    "| stainless steel | 0.65 |\n",
+    "| black velvet    | 0,01 |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intensity of sound waves\n",
-    "* Sound intensity depends on the amplitude of the particle oscillations, which cause pressure variations in the eardrum}. This way we perceive sound.\n",
-    "* The most common way to express a sound intensity $I$ is relatively respect to the intensity needed to reach the threshold of hearing, which by definition is $20\\mu~\\text {P}$ of pressure ($1$ Pascal = $1$ Newton/m$^2$). In this case, the relative loudness or relative SPL (Sound Pressure Level) is expressed as:\n",
-    "  $$                                                                                                                                                                                            \n",
-    "    \\text{SPL} = \\frac{I}{20\\mu~\\text{Pa}}                                                                                                                                                                                          \n",
-    "  $$\n",
-    "* The human auditory system reacts logarithmically to sound intensity. Therefore, we generally express this physical measure in decibels (dB). In this case:\n",
-    "  $$                                                                                                                                                                                                               \n",
-    "    \\text{SPL}[\\text{dB}] = 20\\log\\frac{I}{20\\mu~\\text{Pa}}                                                                                                                                                                         \n",
-    "  $$\n",
-    "* The following table shows some examples with typical sound intensities expressed in dB's. Also it has been added a column to have an idea of the absolute measure of the real intensity $I$.\n",
+    "## Color of the light\n",
+    "* The color of the light depends on the frequency of the luminous wave. We can distinguish between monochrome lights and polychromatic lights. The first ones are composed of a constant frequency wave, while the second ones are a mixture of monochromatic lights.\n",
     "\n",
-    "| Context            | $\\text{SPL}[\\text{dB}]$ | Intensity of sound $I$           |\n",
-    "|--------------------|-------------------------|----------------------------------|\n",
-    "| Auditory threshold |                  $0$ dB | $20\\mu~\\text{Pa}$                |\n",
-    "| Whisper            |                 $20$ dB | $10\\times 20\\mu~\\text{Pa}$       |\n",
-    "| Conversation       |                 $40$ dB | $100\\times 20\\mu~\\text{Pa}$      |\n",
-    "| Traffic            |                 $60$ dB | $1{.}000\\times 20\\mu~\\text{Pa}$  |\n",
-    "| Subway             |                 $80$ dB | $10{.}000\\times 20\\mu~\\text{Pa}$ |\n",
-    "| Threshold of Pain  |                $140$ dB | $10^{7}\\times 20\\mu~\\text{Pa}$   |\n",
-    "| Jet Engine         |                $160$ dB | $10^{8}\\times 20\\mu~\\text{Pa}$   |\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Linear_visible_spectrum.svg/1000px-Linear_visible_spectrum.svg.png\" width=\"800\">\n",
     "\n",
-    "* The human ear is able to work properly between $20\\mu~\\text{Pa}$ ($0$ dB) and $100\\mu~\\text{Pa}$ ($114$ dB), approximately."
+    "* White light is composed of the sum of all the monochromatic lights of the visible spectrum."
    ]
   }
  ],
