--- a/the_light.ipynb
+++ b/the_light.ipynb
@@ -67,8 +67,17 @@
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Linear_visible_spectrum.svg/1000px-Linear_visible_spectrum.svg.png\" width=\"800\">\n",
     "\n",
-    "* White light is composed of the sum of all the monochromatic lights of the visible spectrum."
+    "* White light is composed of the sum of all the monochromatic lights of the visible spectrum.\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/2/28/RGB_illumination.jpg\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
